--- a/projet-dev-mobile/src/app/login/login.page.scss
+++ b/projet-dev-mobile/src/app/login/login.page.scss
@@ -46,3 +46,16 @@ ion-card-content{
   }
 
 }
+ion-content {
+  .error-message
+  {
+    color: red;
+    font-size: 12px;
+    margin-left: 10px;
+    margin-top: -10px;
+  }
+
+  .submit-btn {
+    margin: 48px 12px 12px;
+  }
+}
